--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.mongodb.embedded.version=3.2.5
 spring.data.mongodb.repositories.enabled=true
 spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=true
