--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+# see https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+version=${pom.version}
+timestamp=${maven.build.timestamp}
 spring.mongodb.embedded.version=3.2.5
 spring.data.mongodb.repositories.enabled=true
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=true
+spring.data.mongodb.port=27057
+spring.jackson.serialization.indent_output=true
+spring.http.converters.preferred-json-mapper=jackson
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/hal+json
