--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "angular": "~1.5.5",
     "angular-route": "~1.5.5",
+    "angular-ui-router": "~0.2.10",
     "angular-resource": "~1.5.5",
     "bootstrap": "~3.3.6",
     "angular-bootstrap": "~1.3.2",
     "modernizr": "~2.8.3",
-    "bootstrap-material-design": "^0.5.9"
+    "bootstrap-material-design": "^0.5.9",
+    "angular-utils-pagination" : "^0.11.1"
   }
 }
